test/Fail/UninstantiatedDotPattern.agda

module UninstantiatedDotPattern where

f : Set -> Set -> Set
f .X X = X

